fixed menu spacing, added scripts to composer.json

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -10,37 +10,38 @@
   font-style: normal;
 }
 
-.navbar-brand a:before
+nav.bones-keeper
 {
-  content: '\e800';
-  font-family: "genealabs";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
-  color: rgb(0, 198, 91);
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1em;
-  margin-left: .2em;
-}
-
-.navbar-brand
-{
-  font-weight: bold;
-
-  a
-  {
-    text-decoration: none;
+  margin-top: 25px;
+  
+  .navbar-brand a:before {
+    content: '\e800';
+    font-family: "genealabs";
+    font-style: normal;
     font-weight: normal;
+    speak: none;
+    color: rgb(0, 198, 91);
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: .2em;
+    text-align: center;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1em;
+    margin-left: .2em;
+  }
 
-    .genea
-    {
-      font-family: Limelight;
+  .navbar-brand {
+    font-weight: bold;
+
+    a {
+      text-decoration: none;
+      font-weight: normal;
+
+      .genea {
+        font-family: Limelight;
+      }
     }
   }
 }
@@ -54,3 +55,4 @@
 {
   overflow: visible !important;
 }
+
